data/theme/gnome-shell.css
/* ... */
.popup-menu-icon {
    icon-size: 1.14em;
}

/* Switches (to be used in menus) */
.toggle-switch {
    width: 4.5em;
    height: 1.5em;
}

.toggle-switch-us {
    background-image: url("toggle-off-us.svg");
}
.toggle-switch-us:checked {
    background-image: url("toggle-on-us.svg");
}

.toggle-switch-intl {
    background-image: url("toggle-off-intl.svg");
}
.toggle-switch-intl:checked {
    background-image: url("toggle-on-intl.svg");
}

/* Panel */

#panel {
    color: #ffffff;
    background-color: black;
    border-image: url("panel-border.svg") 1;
    font-size: 10.5pt;
    height: 1.86em;
}

#panelLeft, #panelCenter, #panelRight {
    spacing: 4px;
    font-weight: bold;
}

#panelLeft:ltr {
    padding-right: 4px;
}

#panelLeft:rtl {
    padding-left: 4px;
}

#panelRight:ltr {
    padding-left: 4px;
}

#panelRight:rtl {
    padding-right: 4px;
}

.panel-corner {
    -panel-corner-radius: 10px;
    -panel-corner-background-color: black;
    -panel-corner-inner-border-width: 2px;
    -panel-corner-inner-border-color: transparent;
    -panel-corner-outer-border-width: 1px;
    -panel-corner-outer-border-color: #536272;
}

.panel-corner:active,
.panel-corner:checked,
.panel-corner:focus {
    -panel-corner-inner-border-color: rgba(255,255,255,0.8);
}

#appMenu {
    spacing: 4px;
}

.panel-button #appMenuIcon {
    app-icon-bottom-clip: 1px;
}

.panel-button:active #appMenuIcon,
.panel-button:checked #appMenuIcon,
.panel-button:focus #appMenuIcon {
    app-icon-bottom-clip: 2px;
}

.app-menu-icon {
    width: 24px;
    height: 24px;
}

.panel-button {
    padding: 0px 12px;
    font-weight: bold;
    color: #ccc;
    transition-duration: 100;
}

.panel-button:hover {
    color: white;
    text-shadow: black 0px 2px 2px;
}

.panel-button:active,
.panel-button:checked,
.panel-button:focus {
    border-image: url("panel-button-border.svg") 10 10 0 2;
    background-image: url("panel-button-highlight-wide.svg");
    color: white;
    text-shadow: black 0px 2px 2px;
}

#statusTray > .panel-button:active,
#statusTray > .panel-button:checked,
#statusTray > .panel-button:focus {
    background-image: url("panel-button-highlight-narrow.svg");
}

.panel-button:active > .system-status-icon,
.panel-button:checked > .system-status-icon,
.panel-button:focus > .system-status-icon {
    icon-shadow: black 0px 2px 2px;
}

/* The rounded panel corners we draw don't
 * support transitions, so disable transitions
 * for the buttons at the left/right edges
 */
#panelActivities {
    transition-duration: 0;
}

#panelStatus {
    transition-duration: 0;
}

#panelStatusMenu {
    spacing: 4px;
}

#legacyTray {
    spacing: 14px;
    padding-left: 14px;
}

#legacyTray:rtl {
    padding-left: 0px;
    padding-right: 14px;
}

#legacyTray:compact {
    spacing: 8px;
}

.system-status-icon {
    icon-size: 1.14em;
}

/* Overview */

#overview {
    spacing: 12px;
    background-color: rgba(0,0,0,0.6);
}

.window-caption {
    color: white;
    spacing: 25px;
}

.workspace-controls {
    visible-width: 32px; /* Amount visible before hovering */
}

.workspace-thumbnails-background {
    border: 1px solid rgba(128, 128, 128, 0.4);
    border-right: 0px;
    border-radius: 9px 0px 0px 9px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 8px;
}

.workspace-thumbnails-background:rtl {
    border-right: 1px;
    border-left: 0px;
    border-radius: 0px 9px 9px 0px;
}

.workspace-thumbnails {
    spacing: 7px;
}

.workspace-thumbnail-indicator {
    outline: 2px solid white;
    border: 1px solid #888;
}

.window-caption {
    background: rgba(0,0,0,0.8);
    border: 1px solid rgba(128,128,128,0.40);
    border-radius: 10px;
    font-size: 9pt;
    padding: 2px 8px;
    -shell-caption-spacing: 4px;
}

.window-close {
    background-image: url("close-window.svg");
    height: 34px;
    width: 34px;
    -shell-close-overlap: 20px;
}

.window-close:rtl {
    -st-background-image-shadow: 2px 2px 6px rgba(0,0,0,0.5);
}

/* Dash */

#dash {
    color: #5f5f5f;
    font-size: 9pt;
    padding: 4px 0px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(128, 128, 128, 0.4);
    border-left: 0px;
    border-radius: 0px 9px 9px 0px;
}

#dash:rtl {
    border-left: 1px;
    border-right: 0px;
    border-radius: 9px 0px 0px 9px;
}

#dash:empty {
    height: 100px;
    width: 60px;
}

.dash-placeholder {
    background-image: url("dash-placeholder.svg");
    height: 27px;
    width: 48px;
}

#viewSelector {
    spacing: 1em;
    font-size: 12pt;
}

#viewSelectorTabBar {
    padding: 1em;
}

#searchArea {
    padding: 0px 24px;
}

#searchEntry {
    padding: 4px 12px;
    border-radius: 17px;
    color: rgb(128, 128, 128);
    border: 2px solid rgba(245,245,245,0.2);
    background-gradient-start: rgba(5,5,6,0.1);
    background-gradient-end: rgba(254,254,254,0.1);
    background-gradient-direction: vertical;
    caret-color: rgb(128, 128, 128);
    caret-size: 1px;
    width: 250px;
    transition-duration: 300;
    box-shadow: inset 0px 2px 4px rgba(0,0,0,0.6);
}

#searchEntry:focus,
#searchEntry:hover {
    border: 2px solid rgb(136,138,133);
    background-gradient-start: rgb(200,200,200);
    background-gradient-end: white;
    background-gradient-direction: vertical;
}

#searchEntry:hover {
    transition-duration: 300;
}

#searchEntry:focus {
    color: rgb(64, 64, 64);
    font-weight: bold;
    transition-duration: 0;
}

.search-entry-icon {
    icon-size: 1em;
    color: #8d8f8a;
}

.view-tab-title {
    color: #888a85;
    font-weight: bold;
    padding: 0px 0.75em;
    height: 1.5em;
}

.view-tab-title:hover {
    color: #bbb;
}

.view-tab-title:selected {
    color: #000000;
    background-color: #c2c7cd;
    border-radius: 0.25em;
}

#searchResults {
    padding: 20px 10px 10px 10px;
    spacing: 18px;
}

#searchResultsContent {
    padding-right: 20px;
    spacing: 36px;
}

#searchResultsContent:rtl {
    padding-right: 0px;
    padding-left: 20px;
}
/* ... */

